a z-index thing fixed

--- a/style.main.mob.css
+++ b/style.main.mob.css
@@ -255,6 +255,7 @@ main{
     background-size: cover;
     background-position: center;
     padding: 2rem 43px;
+    z-index: 2;
 }
 
 .innerCourseInfo{
